# wiseman

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-06-26-wiseman-dashboard.md  2026-06-26-wiseman.md
docs/superpowers/specs/: 2026-06-26-summon-teacher-design.md  2026-06-26-summon-wiseman-design.md  2026-06-26-wiseman-dashboard-design.md
server/: pyproject.toml
server/src/wiseman_mcp/: cli.py  db.py  repository.py  schema.sql  server.py  tools.py
server/src/wiseman_mcp/dashboard/: cli.py  server.py
server/src/wiseman_mcp/dashboard/static/: app.js  index.html  styles.css
server/tests/: test_dashboard_cli.py  test_dashboard_server.py  test_dashboard_static.py  test_db.py  test_repository_graph.py  test_repository_index.py  test_repository_lint.py  test_repository_log.py  test_repository_search.py  test_repository_write.py  test_schema_template.py  test_server.py  test_skill_structure.py  test_smoke.py  test_tools.py
skills/summon-wiseman/: SKILL.md
templates/: schema.md
