[project]
name = "wiseman-mcp"
version = "0.1.0"
description = "Wiseman: per-project LLM wiki MCP server"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0"]

[project.scripts]
wiseman-mcp = "wiseman_mcp.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiseman_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/wiseman_mcp/schema.sql" = "wiseman_mcp/schema.sql"
